Added Code Attribution

--- a/Prog_POE/Views/Auth/Login.cshtml
+++ b/Prog_POE/Views/Auth/Login.cshtml
@@ -1,4 +1,30 @@
 ﻿@{
+
+
+
+    ﻿/*
+--------------------------------Student Information----------------------------------
+STUDENT NO.: ST10343093
+Name: Arshad Shoaib Bhula
+Course: BCAD Year 3
+Module: Programming 3A - ENTERPRISE APPLICATION DEVELOPMENT 
+Module Code: PROG7311
+Assessment: Portfolio of Evidence (POE) Part 2
+Github repo link: https://github.com/ST10343093/Prog_POE
+--------------------------------Student Information----------------------------------
+
+==============================Code Attribution==================================
+
+MVC APP
+Author: Microsoft
+Link: https://learn.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/start-mvc?view=aspnetcore-9.0&tabs=visual-studio
+Date Accessed: 03 May 2025
+
+==============================Code Attribution==================================
+
+*/
+
+
     // Specify the title for this page and use the default layout
     ViewData["Title"] = "Login";
     Layout = "_Layout";
